<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="16dp"
    android:background="#fcf0fc">

    <TextView
        android:id="@+id/finalScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Your Score: 0"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/nicknameEditText"
        android:layout_width="200dp"
        android:layout_height="52dp"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:hint="@string/Nickname"
        android:inputType=""
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finalScoreTextView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submitButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:text="@string/Submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/button_bg_selector"
        app:layout_constraintTop_toBottomOf="@+id/nicknameEditText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/playAgainButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:text="@string/PlayAgain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/button_bg_selector"
        app:layout_constraintTop_toBottomOf="@+id/submitButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/menuButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:text="@string/Menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/button_bg_selector"
        app:layout_constraintTop_toBottomOf="@+id/playAgainButton" />

    <TextView
        android:id="@+id/textView4"
        android:textSize="26sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:text="@string/GameOver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
